# AGIcommander

./: .env.example  .gitignore  LICENSE  README-commander-setup.md  README-commander.md  README-registry.md  README.md  commander-1.py  commander-2.py  commander.json  commander.py  commander.txt  docker-compose.yml  filelist.txt  pyproject-1.toml  pyproject-2.toml  pyproject-4.toml  pyproject.toml  requirements.txt  setup.py  startup.sh  test-commander-parse.py  test_basic.py
OpenSearch/: .gitignore  README-opensearch.md  README.md  where.from
S3VectorBuckets/: README-agi-form-factor-likes.md  README-agi-form-factor.md  README-approach.md  README-are-we-gods-01.md  README-are-we-gods.md  README-bio-reproduction.md  README-blue-sky-again.md  README-borg-implants-free-stuff.md  README-borg-implants-hormones.md  README-borg-implants.md  README-borg.md  README-bucket-vs-index.md  README-different-gens.md  README-dreams-and-awake-01.md  README-dreams-and-awake.md  README-dreams.md  README-how-many-agi.md  README-human-in-looo.md  README-jokes.md  README-modified-next-step.md  README-more-to-capture.md  README-music-add.md  README-music.md  README-neon-tech.md  README-networked-intelligence.md  README-next-step.md  README-post-hoc-review.md  README-restrictions.md  README-schema-s3-all.md  README-schema-s3.md  README-schema.md  README-statistics.md  README-ten-years-forward.md  README.md  completed-prompt.txt  database-schema-extension.sql  modified-completed-prompt.txt  modified-processed-prompt.json  next-step-modified.py  next-step.py  (+4 more)
S3VectorBuckets/neon/: README-search-algos.md  README-semantics-01.md  README-semantics-02.md  README-semantics-03.md  README-semantics-04.md  README-semantics-05.md  README-semantics-06.md  README-semantics-07.md  README-semantics-08.md  README-semantics-09.md  README-semantics-10.md  README-semantics-11.md  README-semantics-12.md  README-semantics-13.md  README-vector-example.md  delete_data.py  example.py  read_data.py  semantic-example-01.py  semantic-example-02.py  semantic-example.py  update_data.py  vector_example.py  vector_example_index.py  where.from
agents/: base_agent.py  developer.py
colloquy-with-ai-on-ai/: README-01.docx  README-01.md  README-02.docx  README-02.md  README-03.docx  README-03.md  README-04.docx  README-04.md  README-05.docx  README-05.md  README-06.docx  README-06.md  README-07.docx  README-07.md  README-08.docx  README-08.md  README-09.docx  README-09.md  README-10.docx  README-10.md  README-11.docx  README-11.md  README-12.docx  README-12.md  README-13.docx  README-13.md  README-14.docx  README-14.md  README-15.docx  README-15.md  README-16.docx  README-16.md  README-17.docx  README-17.md  README-18.docx  README-18.md  README-19.docx  README-19.md  README-20.docx  README-20.md  (+34 more)
config/: default.yaml  startup.yaml
core/: orchestrator.py
docs/: README-file-structure-info.md  README-file-structure-more.md  README-file-structure.md  README-roadmap.md  README-s3-workflow.md  README-seperate-servers-question.md  README-top-level.md
groups/: .gitignore  README-16.md  README-17.md  README-18.md  README-19.md  README-20.md  README-21.md  README-blue-sky-1.md  README-blue-sky-10.md  README-blue-sky-11.md  README-blue-sky-12.md  README-blue-sky-13.md  README-blue-sky-14.md  README-blue-sky-15.md  README-blue-sky-16.md  README-blue-sky-17.md  README-blue-sky-18.md  README-blue-sky-19.md  README-blue-sky-2.md  README-blue-sky-20.md  README-blue-sky-21.md  README-blue-sky-22.md  README-blue-sky-23.md  README-blue-sky-24.md  README-blue-sky-25.md  README-blue-sky-26.md  README-blue-sky-27.md  README-blue-sky-28.md  README-blue-sky-29.md  README-blue-sky-3.md  README-blue-sky-30.md  README-blue-sky-31.md  README-blue-sky-32.md  README-blue-sky-33.md  README-blue-sky-4.md  README-blue-sky-5.md  README-blue-sky-6.md  README-blue-sky-7.md  README-blue-sky-8.md  README-blue-sky-9.md  (+18 more)
llm_adapters/: base.py  gemini.py
scripts/: startup.py
servers/: base_server.py
servers/code/: commander.py
servers/learning/: README-Research-MCP-Server.md  research.py
servers/memory/S3/: README.md  requirements.txt  s3_mcp_server.py
servers/memory/vector_db/: README-Vector-Database-MCP-Server.md  README-naming-conventons.md  README.md  vector_db_mcp_server.py
servers/self_reflection/: README-init.md  README-self-reflection-summary.md  __init__.py  evolution.py  improve.py  introspect.py  metrics.py
tests/: test_s3.py  test_s3.sh
tmp/: HARM.md  README-angry.md  README-complex-sentence.md  README-enhanced-understanding-capabilities.md  README-punch-8-symantic-concepts.md  README-punch-compressed-tokens.md  README-punch-structured-semantics.md  README-punch-training-efficiency.md  README-punch.md  README-time.md  README-two-stage-trainint.md  check-s3.py  complete-sentence-processing-example.json  complex-sentence.json  download-s3.py  emotion.json  emotion.py  girl-walking-code.py  girl-walking.json  harm.json  harm.py  hypernym-reduction-example.json  hypernyms.json  hypernyms.py  hypernyms.py~  list-s3.py  punch-nn-with-structured-semantics.py  punch.json  upload-s3.py  walked.json
tools/BeautifulSoup/: README-cheat-sheet.md  example.py
tools/requests/: README-requests.md
two-stage-training/: README-building-this.md  README-generate-meta-data.md  README-preprossor.md  example_text_classification.py  metadata_extractor.py  model_architectures.py  semantic_processor.py  two_stage_trainer.py
two-stage-training-google/: README-explain.md  README-metadata-explain.md  README-preprossor.md
